tests/requests/invalid/002.py
from restkit.http.errors import InvalidRequestLine
request = InvalidRequestLine